fix scrollbar bug

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -1,3 +1,12 @@
+/* For the "inset" look only */
+html,body {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;       
+    overflow: auto;
+}
 /*custom scrollbar*/
 ::-webkit-scrollbar {
     width: 12px;
